# mexClass

./: README.md  clean-up.sh  run_me.sh
include/: aperture.h  aperture_mex.h  bfmath.h  common.h  mex_macro.h  mex_utility.h  mexarg.h
src/: Makefile.am  aperture.cpp  aperture_mex.cpp  bft3_isvar.m  dummy.m  mm_malloc.cpp
src/@bft3_aperture/: bft3_aperture.m
